# clang-cl-vtable-link-bug

./: CMakeLists.txt  README.md  main.cpp  mylib.cpp  mylib.hpp
.github/workflows/: build.yml
